<resources>
    <!-- Ressources générale-->
    <string name="app_name">BatMapp</string>
    <string name="menu_list_alert_item">Créer une alerte</string>
    <string name="apero">Apéro</string>

    <!-- Easter egg-->
    <string name="easteregg_activated">Vous avez débloqué le mode apéro</string>
    <string name="easteregg_ever_activated">Vous avez déjà débloqué le mode apéro</string>

    <!-- Ressources User-->
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>

    <!-- SharedPreferences UserDetail-->
    <string name="detail_user_session">userDetails</string>
    <string name="email_detail_user">email</string>
    <string name="f_name_user_session">fName</string>
    <string name="l_name_user_session">lName</string>
    <string name="picture_user_session">picture</string>

    <!-- SharedPreference LastCoords -->
    <string name="last_coord_pref">lastCoords</string>
    <string name="last_coord_lat">lastLatitude</string>
    <string name="last_coord_lon">lastLontitude</string>

    <!-- Ressources Authentication-->
    <string name="title_activity_authentication">Authentification</string>
    <string name="connexion">Connexion</string>
    <string name="register">S\'enregistrer</string>

    <!-- Ressources Registration-->
    <string name="title_activity_registration">S\'enregistrer</string>

    <!-- Ressources ListAlert-->
    <string name="title_activity_list_alert">Liste des alertes</string>
    <string name="list_alert_sender_view">appel au secours</string>
    <string name="list_alert_receiver_view">personne(s) sont en chemin</string>
    <string name="title_activity_detail_alert">DetailAlert</string>
    <string name="alert_selected">AlertSelected</string>
    <string name="speech">Close navigation drawer</string>
    <string name="km">Km</string>

    <!-- Ressources DetailAlert-->
    <string name="marker_text">a besoin d\'aide</string>
    <string name="title_list_alert_action">Que vouluez vous faire ?</string>
    <string-array name="list_action_alert">
        <item>J\'arrive</item>
        <item>Appeler la police</item>
        <item>Appeler le samu</item>
        <item>Fausse alerte</item>
    </string-array>
    <string name="error_action_alert_title">Déjà prévenu(e)</string>
    <string name="error_action_alert_911">La police à déjà été prévenue</string>
    <string name="error_action_alert_samu">Le samu à déjà été prévenu</string>
    <string name="call_911_number">tel:177</string>
    <string name="call_samu_number">tel:166</string>

    <!-- Ressource CreateAlert-->
    <string name="libelleSelectType">Séléctionner un type d\'alerte</string>
    <string name="libelleSelectCriticity">Séléctionner la criticité de l\'alerte</string>
    <string name="button_create_alert">Envoyer</string>
    <string name="recup_coord">Récupération de vos coordonnées...</string>
    <string name="maj_coords">Vos coordonnées ont été mises à jour</string>
    <string name="error_coords">En attente de vos coordonées</string>
    <string name="error_coords_title">Erreur de localisation</string>
    <string name="alert_gps_disabled_title">GPS désactivé</string>
    <string name="alert_gps_disabled_message">Veuillez activer votre GPS</string>
    <string name="alert_vocal_receiver_error">Erreur de reconaissance vocale</string>

    <string-array name="type_array">
        <item>Attaque de zombie</item>
        <item>Guerre nucléaire</item>
        <item>Invasion aliens</item>
        <item>Inondation planétaire</item>
        <item>Cataclysme cosmique</item>
        <item>La mère à Martin débarque</item>
    </string-array>

    <!-- Menu item -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_alert">Créer une alerte</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- User Detail -->
    <string name="title_profile">Mon Compte</string>
    <string name="title_last_alerts">Les dernières alertes</string>
    <string name="title_users">Liste des utilisateurs</string>
    <string name="title_deco">Déconnexion</string>
    <string name="updateImage">Modifier mon image</string>

    <string name="user_picture_description">Image de profil du sender</string>
    <string name="title_activity_detail_user">Mon Compte</string>

    <!-- Users List-->
    <string name="title_activity_user_list">Liste des utilisateurs</string>
    <string name="title_activity_alerts_map">AlertsMap</string>

    <string name="hello_world">Hello world!</string>

</resources>
