<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.epsi.batmapp.activity.Authentication">

    <ImageView android:id="@+id/auth_logo" android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/bat_logo"
        android:layout_gravity="center"
        android:layout_above="@+id/loginText"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/loginText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/passwordText"
        android:hint="@string/email"
        android:layout_alignEnd="@+id/passwordText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:id="@+id/buttonLogin"
        android:background="@color/bat_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/passwordText"
        android:layout_marginBottom="60dp"
        android:layout_alignEnd="@+id/passwordText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/buttonRegister"
        android:background="@color/bat_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
